# Capstone-Play-Piano

./: .gitignore  MIDI_TO_SHEET_MUSIC.md  README.md  attiny_i2c_neopixel.ino  base_classes.py  build.sh  i2c_gpio_extender.py  midi_reader.py  neopixel_translation.py  piano.py  piano_leds.py  piano_reader.py  play_piano.ino  player_mode.py  pygame_piano.py  scoring.py  scoring_mode.py  speaker.py  teacher_mode.py  testing.py
LEDS/: i2c_pixel_test.py  key_start.py  pixel_timing_test.py
arduino_I2C_to_NEO_TestCode/: arduino_I2C_to_NEO_TestCode.ino
base/: CMakeLists.txt
base/playp_base/: CMakeLists.txt
base/playp_base/include/playp_base/: led_color.h  return_code.h
composer/: play_file.py
composer/sound_files/: mary_little_lamb-midi.ly  mary_little_lamb-midi.midi
composer/utils/: cli_piano.py  key_led_control.py  key_start.py  midi_and_key_converter.py
flask_backend/: app.py  curl_examples.txt  routes.md
flask_backend/src/: __init__.py  conductor.py  key_input.py  keys.py  metadata.py  session_info.py
key_control/: CMakeLists.txt
key_control/playp_key_control/: CMakeLists.txt
key_control/playp_key_control/include/playp_key_control/: key_control.h  key_control_builder.h
key_control/playp_key_control/src/: key_control_builder.cpp  mock_key_control_impl.cpp  mock_key_control_impl.h
key_control/playp_key_control/test/: example_with_mock_key_ctrl.cpp
ly_sandbox/: hot-cross-buns-midi.ly  red_note_finder.py  test_highlight.py  test_spacing.ly
py2c_utils/: string_to_i2c.py
python/: neopixel_i2c_driver.py
python_midi_testing/: midi_test.py  requirments.txt
